removed traling comma which causes "invalid json"

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,6 @@
         "docs": "https://github.com/glueckpress/no-comment/blob/master/README.md"
     },
     "require": {
-        "php": ">=5.3",
+        "php": ">=5.3"
     }
 }
